--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -13,7 +13,7 @@ train:
   num_iter: 5000 # number of training iterations with total_batch size
   lr_steps: 3000 # steps before reducing learning rate
   eval_freq: 50 # evaluation frequency
-  num_clips: 1 # clips adopted in training
+  num_clips: 5 # clips adopted in training
   dense_sampling: # sampling version adopted in training for each modality
     RGB: True
   num_frames_per_clip: # number of frames adopted in training for each modality
@@ -49,3 +49,6 @@ models:
     lr: 0.01
     sgd_momentum: 0.9
     weight_decay: 1e-7
+    avg_modality: Pooling #can be Pooling or TRN
+    num_clips: 5 # number of clips in the pooling
+    num_classes: 8 # number of classes
