--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -49,6 +49,6 @@ models:
     lr: 0.01
     sgd_momentum: 0.9
     weight_decay: 1e-7
-    avg_modality: Pooling #can be Pooling or TRN
+    avg_modality: TRN #can be Pooling or TRN
     num_clips: 5 # number of clips in the pooling
     num_classes: 8 # number of classes
