-Second development commit of TA3N: -Final Classifier implementation completed (to be debugged) - DataLoader implementation completed (to be debugged) -LossFunction and Accuracy implementation completed (to be debugged) -TODO: adjust tensor dimensions -TODO: add softmax -TODO: Validate function in train_classifier.py

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -49,6 +49,8 @@ models:
     lr: 0.01
     sgd_momentum: 0.9
     weight_decay: 1e-7
-    avg_modality: TRN #can be Pooling or TRN
+    avg_modality: Pooling #can be Pooling or TRN
     num_clips: 5 # number of clips in the pooling
     num_classes: 8 # number of classes
+    baseline_type: video # baseline type : video or frame
+    domain_adapt_strategy: [] # domain adaptation strategy adopted
