--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -8,6 +8,7 @@ wandb_name: null # needed for wandb logging
 resume_from: null # checkpoint directory
 logname: null # name of the logs
 models_dir: null # directory containing all the models
+colab: False # if running on colab
 
 train:
   num_iter: 5000 # number of training iterations with total_batch size
@@ -49,8 +50,9 @@ models:
     lr: 0.01
     sgd_momentum: 0.9
     weight_decay: 1e-7
+    beta: 0.5
     avg_modality: Pooling #can be Pooling or TRN
     num_clips: 5 # number of clips in the pooling
     num_classes: 8 # number of classes
     baseline_type: video # baseline type : video or frame
-    domain_adapt_strategy: [] # domain adaptation strategy adopted
+    domain_adapt_strategy: ['GSD'] # domain adaptation strategy adopted
