-Debug of Attention module: -Reimplemented attention module as in cmhungsteve Github

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -55,4 +55,4 @@ models:
     num_clips: 5 # number of clips in the pooling
     num_classes: 8 # number of classes
     baseline_type: video # baseline type : video or frame
-    domain_adapt_strategy: ['GRD'] # domain adaptation strategy adopted
+    domain_adapt_strategy: ['GSD','GRD','GVD','ATT'] # domain adaptation strategy adopted
